hphp/test/zend/good/ext-sqlite3/sqlite3_01_open.php
<?php

require_once(dirname(__FILE__) . '/new_db.inc');

var_dump($db);
var_dump($db->close());
echo "Done\n";
?>